--- a/app/src/main/res/layout/content_start.xml
+++ b/app/src/main/res/layout/content_start.xml
@@ -12,7 +12,7 @@
     android:orientation="vertical"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="ua.com.mostivskyi.vitalii.tessaracttestapp.StartActivity"
+    tools:context=".activities.StartActivity"
     tools:showIn="@layout/activity_start">
 
     <Button
