Some changes in strings.

--- a/app/src/main/res/layout/content_start.xml
+++ b/app/src/main/res/layout/content_start.xml
@@ -19,7 +19,7 @@
         android:id="@+id/takePhotoButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_text" />
+        android:text="@string/recognizeButtonText" />
 
     <EditText
         android:id="@+id/recognizedTextField"
