Add "RecognizeFromFile" button.

--- a/app/src/main/res/layout/content_start.xml
+++ b/app/src/main/res/layout/content_start.xml
@@ -21,9 +21,16 @@
         android:layout_height="wrap_content"
         android:text="@string/recognizeButtonText" />
 
+    <Button
+        android:id="@+id/recognizeFromFileButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/recognizeFromFileButtonText"/>
+
     <EditText
         android:id="@+id/recognizedTextField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/text_hint" />
+
 </LinearLayout>
