--- a/app/src/main/res/layout/content_start.xml
+++ b/app/src/main/res/layout/content_start.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,17 +14,39 @@
     tools:context=".activities.StartActivity"
     tools:showIn="@layout/activity_start">
 
-    <EditText
-        android:id="@+id/recognizedTextField"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/text_hint" />
+        android:id="@+id/cardViewText"
+        android:padding="32dp"
+        android:layout_margin="16dp"
+        card_view:cardCornerRadius="6dp">
 
-    <ImageView
-        android:id="@+id/croppedImageView"
-        android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/recognizedTextField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/text_hint" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp" />
+        android:id="@+id/cardViewView"
+        android:padding="32dp"
+        android:layout_margin="16dp"
+        card_view:cardCornerRadius="6dp">
+
+        <ImageView
+            android:id="@+id/croppedImageView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="16dp" />
+
+    </android.support.v7.widget.CardView>
+
+
 
 </LinearLayout>
