--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -10,24 +10,17 @@
         android:id="@+id/cropImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        custom:cropMode="ratio_free"
-        android:layout_weight="90"/>
+        android:layout_weight="90"
+        custom:cropMode="ratio_free"/>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/cropButton"
+        style="@style/AppTheme.Button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/cropButton"
-            style="@style/AppTheme.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/cropImageView"
-            android:layout_gravity="center_horizontal|bottom"
-            android:text="@string/cropButtonText"
-            android:layout_weight="10"/>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cropImageView"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_weight="10"
+        android:text="@string/cropButtonText"/>
 
 </LinearLayout>
