--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -14,6 +14,7 @@
     <Button
         android:id="@+id/cropButton"
         style="@style/AppTheme.Button"
+        android:background="@drawable/button_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cropImageView"
