--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -18,16 +18,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            android:contentDescription="App" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/mainActivityTitle"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:textSize="24sp"/>
-
+            android:contentDescription="App"
+            app:title="@string/app_name">
             </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
